--- a/config.ini
+++ b/config.ini
@@ -68,6 +68,10 @@ english_select_directory = Select Directory
 english_generate_image = Generate Image
 english_result = Result
 english_error_message = Error
+english_select_directory_warning = Please select a directory to save the images.
+vietnamese_select_directory_warning = Vui lòng chọn thư mục để lưu ảnh.
+english_directory_selected = Directory selected
+vietnamese_directory_selected = Thư mục đã chọn
 vietnamese_title = Tạo Ảnh với Leonardo
 vietnamese_starting = Bắt đầu...
 vietnamese_waiting = Đang đợi...
